# climb-sdk

./: .gitignore  CPPLINT.cfg  LICENSE  README.md  setup.sh
climb_control/: CMakeLists.txt  package.xml
climb_control/include/climb_control/: contact_estimator.hpp  controller_node.hpp  force_controller.hpp  force_estimator.hpp
climb_control/src/: contact_estimator.cpp  controller_node.cpp  force_controller.cpp  force_estimator.cpp
climb_control/test/: controller_test.cpp
climb_footstep_planner/: CMakeLists.txt  package.xml
climb_footstep_planner/include/climb_footstep_planner/: footstep_planner.hpp  footstep_planner_node.hpp  terrain_generator.hpp
climb_footstep_planner/include/climb_footstep_planner/planners/: dummy_planner.hpp  global_planner.hpp  local_planner.hpp  planner.hpp
climb_footstep_planner/src/: footstep_planner.cpp  footstep_planner_node.cpp  terrain_generator.cpp
climb_footstep_planner/src/planners/: global_planner.cpp  local_planner.cpp  planner.cpp
climb_gait_planner/: CMakeLists.txt  package.xml
climb_gait_planner/include/climb_gait_planner/: gait_planner.hpp  gait_planner_node.hpp
climb_gait_planner/src/: gait_planner.cpp  gait_planner_node.cpp
climb_gait_planner/test/: gait_planner_test.cpp
climb_gait_planner/test/resources/: test_robot.urdf
climb_kinematics/: CMakeLists.txt  package.xml
climb_kinematics/include/climb_kinematics/: kinematics_node.hpp
climb_kinematics/include/climb_kinematics/interfaces/: kdl_interface.hpp  kinematics_interface.hpp
climb_kinematics/include/climb_kinematics/kinematics_interfaces/: kdl_interface.hpp  (+1 more)
climb_kinematics/src/: kinematics_node.cpp
climb_kinematics/src/interfaces/: kdl_interface.cpp  kinematics_interface.cpp
climb_kinematics/src/kinematics_interfaces/: kdl_interface.cpp  kinematics_interface.cpp
climb_kinematics/test/: kinematics_test.cpp
climb_main/: CMakeLists.txt  package.xml
climb_main/config/: params.yaml  ukf.yaml
climb_main/include/climb_main/: controller_node.hpp  hardware_node.hpp  key_input_node.hpp  step_planner_node.hpp  teleop_node.hpp
climb_main/launch/: camera.xml  climber.py  climber_base.launch.py  climber_control.launch.py  climber_plan.launch.py
climb_main/src/: controller_node.cpp  hardware_node.cpp  key_input_node.cpp  step_planner_node.cpp  teleop_node.cpp
climb_main/src/controller/: contact_estimator.cpp  force_controller.cpp  force_estimator.cpp  osqp_interface.cpp  qp_interface.cpp
climb_main/src/hardware/: dummy_interface.cpp  dynamixel_interface.cpp  hardware_interface.cpp
climb_main/src/kinematics/: kdl_interface.cpp  kinematics_interface.cpp  kinematics_node.cpp
climb_main/src/optimization/: osqp_interface.cpp  piqp_interface.cpp  qp_interface.cpp  qp_problem.cpp
climb_main/src/step_planner/: step_planner.cpp
climb_main/src/teleop/: key_input_parser.cpp
climb_main/src/util/: eigen_utils.cpp  parameterized.cpp
climb_main/test/: controller_test.cpp  hardware_test.cpp  kinematics_test.cpp  optimization_test.cpp  step_planner_test.cpp  util_test.cpp
climb_main/test/resources/: test_robot.urdf
climb_main/test/util/: test_utils.hpp
climb_msgs/: CMakeLists.txt  package.xml
climb_msgs/action/: FootstepCommand.action  StepCommand.action
climb_msgs/msg/: ActuatorState.msg  BehaviorCommand.msg  ContactCommand.msg  ContactForce.msg  ContactState.msg  ControllerCommand.msg  EndEffectorCommand.msg  Footstep.msg  FootstepPlan.msg  FootstepUpdate.msg  JointCommand.msg  StepOverrideCommand.msg  TeleopMessage.msg  TeleopOutput.msg
climb_msgs/srv/: ActuatorCommand.srv  ActuatorEnable.srv  ControllerEnable.srv  KeyInput.srv  SetString.srv  TeleopInput.srv
climb_optimization/: CMakeLists.txt  package.xml
climb_optimization/include/climb_optimization/: qp_problem.hpp
climb_optimization/src/: qp_problem.cpp
climb_optimization/src/qp_interfaces/: osqp_interface.cpp  piqp_interface.cpp  qp_interface.cpp
climb_optimization/test/: optimization_test.cpp
climb_robot_driver/: CMakeLists.txt  package.xml
climb_robot_driver/include/climb_robot_driver/: robot_driver_node.hpp
climb_robot_driver/src/: robot_driver_node.cpp
climb_robot_driver/src/hardware_interfaces/: dummy_interface.cpp  dynamixel_interface.cpp  hardware_interface.cpp
climb_robot_driver/src/interfaces/: dummy_interface.cpp  dynamixel_interface.cpp  hardware_interface.cpp
climb_robot_driver/test/: hardware_interface_test.cpp
climb_sdk/: CMakeLists.txt  package.xml
climb_sim/: CMakeLists.txt  package.xml
climb_sim/hooks/: climb_sim.dsv.in
climb_sim/include/: grasp_system.hpp
climb_sim/launch/: sim.launch.py  sim.py
climb_sim/src/: grasp_system.cpp
climb_sim/worlds/: test.sdf
climb_teleop/: CMakeLists.txt  package.xml
climb_teleop/include/climb_teleop/: key_input_node.hpp  key_input_parser.hpp  teleop_node.hpp
climb_teleop/src/: key_input_node.cpp  key_input_parser.cpp  teleop_node.cpp
climb_util/: CMakeLists.txt  package.xml
climb_util/include/climb_util/: eigen_utils.hpp  geometry_utils.hpp  parameterized.hpp  ros_utils.hpp  test_utils.hpp
climb_util/src/: eigen_utils.cpp  geometry_utils.cpp  parameterized.cpp
climb_util/test/: util_test.cpp
loris_bringup/: CMakeLists.txt  package.xml
loris_bringup/config/: params.yaml  ukf.yaml
loris_bringup/launch/: camera.xml  climber_base.launch.py  climber_control.launch.py  climber_plan.launch.py
robot_description/loris_description/: CMakeLists.txt  README.md  package.xml
robot_description/loris_description/config/: gz_params.yaml  loris.yaml
robot_description/loris_description/launch/: display.launch.py  display.py
robot_description/loris_description/meshes/: body_front.STL  body_rear.STL  camera.STL  camera_mount.STL  gripper_1.STL  lower_limb.STL  lower_limb_2.STL  lower_limb_3.STL  lower_limb_4.STL  shoulder.STL  shoulder_2.STL  shoulder_3.STL  shoulder_4.STL  tail.STL  upper_limb.STL  upper_limb_2.STL  upper_limb_3.STL  upper_limb_4.STL
robot_description/loris_description/rviz/: display.rviz  loris.rviz
robot_description/loris_description/urdf/: loris.csv  loris.urdf.xacro
(+33 files in other folders)
