<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>climb_gait_planner</name>
  <version>0.0.0</version>
  <description>Planner for coordinating the transition to a new stance </description>
  <maintainer email="pnadan@cmu.edu">Paul Nadan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>climb_util</build_depend>
  <build_depend>climb_kinematics</build_depend>

  <depend>geometry_msgs</depend>
  <depend>climb_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
