<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>climb_robot_driver</name>
  <version>0.0.0</version>
  <description>Hardware interface for a climbing robot</description>
  <maintainer email="pnadan@cmu.edu">Paul Nadan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>climb_util</build_depend>

  <depend>sensor_msgs</depend>
  <depend>climb_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
